--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
     </tr>
   </table>
   <hr>
-  <a href="/Users/dontaesumpter/Desktop/web_development_folder/WebProjects/HomePage/Hobbies.html">My Hobbies</a>
+  <a href="Hobbies.html">My Hobbies</a>
   <a href="contact-me.html">contact me</a>
 </div>
 </body>
