--- a/index.html
+++ b/index.html
@@ -4,42 +4,104 @@
 <head>
   <meta charset="utf-8">
   <title>Don's 1st site</title>
-  <link rel="stylesheet" href="style.css">
+
+  <style>
+    hr {
+      background-color: #DA0037;
+      border-style: dotted;
+      border-top-style: dotted;
+      height: 1px;
+      border-color: #DA0037;
+    }
+
+
+    #kaws {
+      height: 490px;
+      width: 300px;
+      opacity: 1;
+      border-style: none;
+      border-width: medium;
+      padding-left: 60px
+    }
+
+    #akira {
+      height: 450px;
+      width: 450px;
+      https: //rare-gallery.com/thumbnail/470737-Bleach-anime-manga-Kurosaki-Ichigo-bankai-monochrome.jpg
+        border-style: none;
+      border-width: medium;
+
+    }
+
+    #ichigo {
+      height: 450px;
+      width: 420px;
+      border-style: none;
+      border-width: medium;
+      padding-left: 60px;
+    }
+
+    #demonSlayer {
+      height: 450px;
+      width: 440px;
+      padding-left: 350px;
+      border-style: none;
+      border-width: thick;
+
+    }
+  </style>
+
 </head>
 
 <body>
-    <img src="kobe.jpeg" alt="Dons Img 1">
 
-    <table id="table-1">
-  <thead>
-    <tr>
-      <th>NBA All-Star</th><br>
-      <th>Championships</th>
+  <img id="akira" src="https://images.fineartamerica.com/images/artworkimages/mediumlarge/1/akira-logo-balerante-wates.jpg" alt="Dons Img 1">
 
-    </tr>
-  </thead>
-  <tbody>
-    <tr>
-      <td>18x</td>
-      <td>5x</td>
-    </tr>
-</table>
+  <img id="kaws" src="https://i.pinimg.com/564x/6a/e9/49/6ae94920d81ad1f18a64254e6de935ad.jpg" alt="Dons Img 1">
+  <img id="ichigo" src="https://rare-gallery.com/thumbnail/470737-Bleach-anime-manga-Kurosaki-Ichigo-bankai-monochrome.jpg" alt="Dons Img 1">
+  <table id="table-1">
+    <thead>
+      <div class="container">
+      <iframe src="https://www.youtube.com/embed/DLhiyjWSDwE?start=0&autoplay=1&mute=1" width="560" height="315" title="A YouTube video" frameborder="0" allowfullscreen></iframe>
+        <tr>
+          <th>Shinigami(死神)</th>
+          <br>
+          <th>Udemy Student</th>
 
-</div>
-<div id="content">
-  <h1>Don Sumpter</h1>
+        </tr>
+    </thead>
+    <tbody>
+      <tr>
+        <td>3 years </td>
+        <td>1 month</td>
+      </tr>
+  </table>
+  <div id="content">
+  </div>
+  <h1>Anime/Music/StreetWear</h1>
   <link rel="stylesheet" href="style.css">
   <p><em>
-      <p>I am a iOS and web devolper.I love my wife and my fur baby Gia</p>
-      <strong>Udemey</strong> is one of the best learning tools.
-      <a href="https://www.udemy.com/course/the-complete-web-development-bootcamp/learn/lecture/12685347#overview">Udemey</a>
-    </em></p>
+      <p>
+      <h1>Future iOS and web devolper.
+        <br>
+        <br>
+        I love my wife and my fur baby Gia.
+        <br>
+        <br>
+        Coding_Gaming_Sports and Anime
+      </h1>
+  </p>
+  <strong>Udemey</strong> is one of the best learning tools.
+  <a href="https://www.udemy.com/course/the-complete-web-development-bootcamp/learn/lecture/12685347#overview">Udemey</a>
+  </em></p>
   <hr>
-  <strong>Anime & Sports</strong>
-  <h3>Myers Park</h3>
+  <strong id="strongAnime">ANIME & SPORTS</strong>
+  <img id="demonSlayer" src="https://i.pinimg.com/564x/e7/57/33/e75733213fb0f403582aae0272562d21.jpg" alt="Dons Img 1">
+  <h3>Udemey Academy</h3>
   <ul>
-    <li>Cool Parties and laid back nights </li>
-    <li>Hella people would show up</li>
+    <li>Late night coding</li>
+    <li>Introdution to html</li>
+    <li>Cascading Style Sheet(CSS)</li>
   </ul>
   <h3>Work Experince</h3>
   <table>
@@ -65,9 +127,9 @@
     </tr>
   </table>
   <hr>
-  <a href="Hobbies.html">My Hobbies</a>
+  <a href="/Users/dontaesumpter/Desktop/web_development_folder/WebProjects/HomePage/Hobbies.html">My Hobbies</a>
   <a href="contact-me.html">contact me</a>
-</div>
+  </div>
 </body>
 
 </html>
